syntax = "proto3";

package policy.v1;

option go_package = "github.com/cerbos/cerbos/internal/genpb/policy/v1;policyv1";

import "shared/v1/shared.proto";
import "request/v1/request.proto";
import "validate/validate.proto";

message Policy {
    string api_version = 1 [(validate.rules).string.const = "cerbos.dev/v1"];
    bool disabled = 2;
    string description = 3;
    oneof policy_type {
        option (validate.required) = true;
        ResourcePolicy resource_policy = 4;
        PrincipalPolicy principal_policy = 5;
        DerivedRoles derived_roles = 6;
    }
}

message ResourcePolicy {
    string resource = 1 [(validate.rules).string = {pattern: "^[[:alpha:]][[:word:]\\@\\.\\-]*(\\:[[:alpha:]][[:word:]\\@\\.\\-]*)*$", min_len: 1}];
    string version = 2 [(validate.rules).string.pattern = "^[[:word:]]+$"];
    repeated string import_derived_roles = 3 [(validate.rules).repeated = { unique: true, items { string { pattern: "^[[:word:]\\-\\.]+$" } } }];
    repeated ResourceRule rules = 4 [(validate.rules).repeated.min_items = 1];
}

message ResourceRule {
    repeated string actions = 1 [(validate.rules).repeated = { unique: true, items { string { min_len: 1 } } }];
    repeated string derived_roles = 2 [(validate.rules).repeated = { unique: true, items { string { pattern: "^[[:word:]\\-\\.]+$" } } }];
    repeated string roles = 3 [(validate.rules).repeated = { unique: true, items { string { pattern: "^[[:word:]\\-\\.]+$" } } }];
    Computation condition = 4;
    shared.v1.Effect effect = 5 [(validate.rules).enum = {in: [1,2]}];
}

message PrincipalPolicy {
    string principal = 1 [(validate.rules).string = {pattern: "^[[:alpha:]][[:word:]\\@\\.\\-]*(\\:[[:alpha:]][[:word:]\\@\\.\\-]*)*$", min_len: 1}];
    string version = 2 [(validate.rules).string.pattern = "^[[:word:]]+$"];
    repeated PrincipalRule rules = 3 [(validate.rules).repeated.min_items = 1];
}

message PrincipalRule {
    message Action {
        string action = 1 [(validate.rules).string.min_len = 1];
        Computation condition = 2;
        shared.v1.Effect effect = 3 [(validate.rules).enum = {in: [1,2]}];
    }

    string resource = 1 [(validate.rules).string = {pattern: "^[[:alpha:]][[:word:]\\@\\.\\-]*(\\:[[:alpha:]][[:word:]\\@\\.\\-]*)*$", min_len:1}];
    repeated Action actions = 2 [(validate.rules).repeated.min_items = 1];
}

message DerivedRoles {
    string name = 1 [(validate.rules).string = {pattern:"^[[:word:]\\-\\.]+$", min_len: 1}];
    repeated RoleDef definitions = 2 [(validate.rules).repeated.min_items = 1];
}

message RoleDef {
    string name = 1 [(validate.rules).string.pattern = "^[[:word:]\\-\\.]+$"];
    repeated string parent_roles = 2 [(validate.rules).repeated = { unique: true, min_items:1, items { string { pattern: "^[[:word:]\\-\\.]+$" } } }];
    Computation computation = 3;
}

message Computation {
    oneof computation {
        option (validate.required) = true;
        Match match = 1;
        string script = 2;
    }
}

message Match {
    repeated string expr = 1 [(validate.rules).repeated = {min_items: 1, items { string { min_len: 1} } }];
}

message TestSuite {
    string name = 1 [(validate.rules).string.min_len = 1];
    string description = 2;
    bool skip = 3;
    string skip_reason = 4;
    repeated Test tests = 5 [(validate.rules).repeated.min_items = 1];
}

message Test {
    string name = 1 [(validate.rules).string.min_len = 1];
    string description = 2;
    bool skip = 3;
    string skip_reason = 4;
    request.v1.CheckRequest request = 5 [(validate.rules).message.required = true];
    shared.v1.Effect expected_effect = 6 [(validate.rules).enum.defined_only = true];
}
